--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
+    "recharts": "^2.0.8",
     "redux-persist": "^6.0.0",
     "web-vitals": "^1.0.1"
   },
