--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -15,6 +16,7 @@
     "react-scripts": "^4.0.3",
     "recharts": "^2.0.8",
     "redux-persist": "^6.0.0",
+    "swiper": "^6.5.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
